# Raven

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  default.nix  flake.nix
docs/: window-lifecycle.md
scripts/: smoke-daily-driver.sh
src/: action.rs  config.rs  cursor.rs  input.rs  lib.rs  main.rs  state.rs  vblank_throttle.rs
src/backend/: udev.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
src/protocols/: ext_workspace.rs  foreign_toplevel.rs  mod.rs
src/render_helpers/: mod.rs  solid_color.rs
src/state/: focus.rs  fullscreen.rs  ipc.rs  rules.rs  runtime.rs  workspaces.rs
